- changed font family to Atkinson Hyperlegible Mono from Comic Sans - implemented `view_note` page so when the user clicks on a specific note, that note's data populates on the view_note page. - fixed a bug where when the user clicks out of the `view_note` page, they see the `write_note` page. the user should only see the `write_note` page if they click their cursor on an empty part of the bulletin board, and they only see the `view_note` page if they actually click on an existing note.

--- a/frontend/src/pages/page_about/about.css
+++ b/frontend/src/pages/page_about/about.css
@@ -97,7 +97,10 @@
   padding: 15px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   border-radius: 2px;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: "Atkinson Hyperlegible Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   transform: rotate(-3deg);
   cursor: pointer;
   transition: transform 0.2s;
