--- a/frontend/src/pages/page_view_note/view_note.css
+++ b/frontend/src/pages/page_view_note/view_note.css
@@ -12,15 +12,18 @@
   
 }
 
-.modal.sticky-note {
+.note-modal {
   position: relative;
   width: 300px;
   min-height: 200px;
   padding: 20px;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: "Atkinson Hyperlegible Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
   transform: rotate(0deg);
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .pin {
