--- a/frontend/src/pages/page_write_note/write_note.css
+++ b/frontend/src/pages/page_write_note/write_note.css
@@ -18,7 +18,10 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 4px 4px 8px rgba(0,0,0,0.3);
-  font-family: 'Comic Sans MS', cursive;
+  font-family: "Atkinson Hyperlegible Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   display: flex;
   flex-direction: column;
   gap: 10px;
